# employee-requests

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: database.py  generate_data.py  main.py  models.py  performance_test.py  services.py
