[project]
name = "emp-req"
version = "0.1.0"
description = "Система управления заявками"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]==0.113.0",
    "pydantic==2.8.0",
    "ruff>=0.15.21",
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
    "faker>=25.0.0",
    "alembic>=1.13.0",
]